<resources>
    <string name="app_name">ToDoApp</string>
    <string name="info_symbol">ⓘ</string>
    <string name="example_text">TodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTodoTod</string>
    <string name="cancel">Cancel</string>
    <string name="save_button_text">СОХРАНИТЬ</string>
    <string name="task_description">Task description</string>
    <string name="importance">Важность</string>
    <string name="deadline">Сделать до</string>
    <string name="delete">Удалить</string>
    <string name="done">Выполнено –</string>
    <string name="num_example">123</string>
    <string name="hide_done_tasks">hide_done_tasks</string>
    <string name="enter_the_task">Введите задачу</string>
    <string name="choose_the_date">Выберите дату</string>
    <string name="my_tasks">Мои дела</string>
    <string name="todo_edit_label">Что надо сделать…</string>
    <string name="todo_priority_low">Низкая</string>
    <string name="todo_priority_high">Высокая</string>
    <string name="todo_priority_medium">Средняя</string>
    <string name="calendar_ok">ГОТОВО</string>
    <string name="calendar_cancel">ОТМЕНА</string>

    <string name="choose_date_cancel">Выберите будущую дату</string>
    <string name="add_task_button_description">add_task_button</string>
    <string name="empty_string" />
    <string name="medium_importance_symbol">!</string>
    <string name="high_importance_symbol">!!</string>
    <string name="connection_ok">Соединение установлено</string>
    <string name="connection_bad">Нет соединения с сервером\nДанные могут быть неактуальны</string>
    <string name="refresh_button">refresh_button</string>
    <string name="refresh">Обновление</string>
    <string name="network_error">Не удалось связаться с сервером</string>
    <string name="choose_theme">Выберите тему</string>
    <string name="light_theme_name">Всегда светлая</string>
    <string name="dark_theme_name">Всегда тёмная</string>
    <string name="as_in_system_theme_name">Как в системе</string>
    <string name="close_settings_button_text">Назад</string>
    <string name="open_theme_settings_button">Open theme settings button</string>
    <string name="open_about_app_page_button">open about app page button</string>
</resources>