<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.MainActivity"
    android:background="@color/support_overlay"
    >


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8.5"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingStart="58dp"
            android:paddingEnd="0dp"
            android:paddingBottom="0dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_tasks"
                android:textSize="@dimen/large_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done"
                    android:textColor="@color/color_gray"
                    android:textSize="@dimen/subhead" />

                <TextView
                    android:id="@+id/doneCounter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/num_example"
                    android:textColor="@color/color_gray"
                    android:textSize="@dimen/subhead" />
            </LinearLayout>


        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_toggle_visibility"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="2"
            android:background="@color/support_overlay"
            android:backgroundTint="@color/support_overlay"
            android:contentDescription="@string/hide_done_tasks"
            android:src="@drawable/eye_on" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:nestedScrollingEnabled="true"
        android:background="@drawable/rounded_edittext"
        android:layout_margin="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />






</androidx.constraintlayout.widget.ConstraintLayout>